--- a/test/fixtures/services.yml
+++ b/test/fixtures/services.yml
@@ -1,13 +1,19 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
-  description: MyText
+  title: Eiken
+  description: Eiken Exams
   position: 1
-  locale: MyString
+  locale: en
 
 two:
-  title: MyString
-  description: MyText
+  title: Grammer
+  description: Hi School Grammar
   position: 1
-  locale: MyString
+  locale: Grammar
+  
+three:
+  title: TOEIC
+  description: TOEIC Exams
+  position: 1
+  locale: en
